Fix spacing for top tabs

--- a/http/style.css
+++ b/http/style.css
@@ -20,10 +20,10 @@ html, body {
 .maintable {
   position: absolute;
   z-index: 10;
-  top: 0;
+  top: 37px;
   left: 0;
   right: 0;
-  bottom: 37px;
+  bottom: 0;
 }
 
 .table_wrapper {
